[package]
name = "sahayak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
crossterm = "0.27.0"
dialoguer = "0.11.0"
indicatif = "0.17.7"
ratatui = "0.25.0"
serde = "1.0.196"
